[gd_scene load_steps=14 format=3 uid="uid://cqomd4rnescs6"]

[ext_resource type="Script" path="res://Scripts/NotasDevlogs/NotasDevlog_1.gd" id="1_pblja"]
[ext_resource type="Theme" uid="uid://b4gvvxv8ucw2g" path="res://Assets/paginastheme.tres" id="2_5yprk"]
[ext_resource type="FontFile" uid="uid://i4ckcgrvy0fy" path="res://Assets/Kurland_Font_0_33/Kurland.ttf" id="3_36pvw"]
[ext_resource type="Theme" uid="uid://cy2ecrfxy0ckm" path="res://Assets/checkTheme.tres" id="4_sq1el"]
[ext_resource type="Texture2D" uid="uid://cnelvb78mdktk" path="res://Assets/Crunchycons/Icons/ArrowLeft_20220327174131.png" id="5_6cbq4"]
[ext_resource type="Texture2D" uid="uid://ckkg2wb3wx2u6" path="res://Assets/Crunchycons/Icons/ArrowLeftTransparent_20220327174122.png" id="6_24dae"]
[ext_resource type="Texture2D" uid="uid://4mhvxv2usi6u" path="res://Assets/Crunchycons/Icons/ArrowLeftBlack_20220327174126.png" id="7_b52kl"]

[sub_resource type="Theme" id="Theme_ykj8p"]
Label/font_sizes/font_size = 80
Label/fonts/font = ExtResource("3_36pvw")

[sub_resource type="Theme" id="Theme_juuyf"]
RichTextLabel/font_sizes/normal_font_size = 40

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l3gst"]
texture = ExtResource("5_6cbq4")
texture_margin_top = 10.0
texture_margin_bottom = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3m8mr"]
texture = ExtResource("6_24dae")
texture_margin_top = 10.0
texture_margin_bottom = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1rgii"]
texture = ExtResource("7_b52kl")
texture_margin_top = 10.0
texture_margin_bottom = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_nvvw5"]
Button/styles/hover = SubResource("StyleBoxTexture_l3gst")
Button/styles/normal = SubResource("StyleBoxTexture_3m8mr")
Button/styles/pressed = SubResource("StyleBoxTexture_1rgii")

[node name="NotasDevlog_1" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pblja")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 2
theme = ExtResource("2_5yprk")

[node name="Label" type="Label" parent="ItemList"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -521.0
offset_top = 20.0
offset_right = 521.0
offset_bottom = 193.0
grow_horizontal = 2
theme = SubResource("Theme_ykj8p")
text = "¿Qué notas puedes obtener en
el devlog?"
horizontal_alignment = 1

[node name="correcto" type="Button" parent="ItemList"]
layout_mode = 0
offset_left = 507.0
offset_top = 239.0
offset_right = 567.0
offset_bottom = 299.0
theme = ExtResource("4_sq1el")
toggle_mode = true

[node name="RichTextLabel" type="RichTextLabel" parent="ItemList/correcto"]
layout_mode = 0
offset_left = 86.0
offset_top = 7.0
offset_right = 618.0
offset_bottom = 69.0
theme = SubResource("Theme_juuyf")
text = "1.0
"

[node name="correcto2" type="Button" parent="ItemList"]
layout_mode = 0
offset_left = 507.0
offset_top = 309.0
offset_right = 567.0
offset_bottom = 369.0
theme = ExtResource("4_sq1el")
toggle_mode = true

[node name="RichTextLabel" type="RichTextLabel" parent="ItemList/correcto2"]
layout_mode = 0
offset_left = 86.0
offset_top = 7.0
offset_right = 847.0
offset_bottom = 69.0
theme = SubResource("Theme_juuyf")
text = "7.0
"

[node name="correcto3" type="Button" parent="ItemList"]
layout_mode = 0
offset_left = 507.0
offset_top = 449.0
offset_right = 567.0
offset_bottom = 509.0
theme = ExtResource("4_sq1el")
toggle_mode = true

[node name="RichTextLabel" type="RichTextLabel" parent="ItemList/correcto3"]
layout_mode = 0
offset_left = 86.0
offset_top = 7.0
offset_right = 847.0
offset_bottom = 69.0
theme = SubResource("Theme_juuyf")
text = "4.0"

[node name="incorrecto3" type="Button" parent="ItemList"]
layout_mode = 0
offset_left = 507.0
offset_top = 589.0
offset_right = 567.0
offset_bottom = 649.0
theme = ExtResource("4_sq1el")
toggle_mode = true

[node name="RichTextLabel" type="RichTextLabel" parent="ItemList/incorrecto3"]
layout_mode = 0
offset_left = 86.0
offset_top = 7.0
offset_right = 847.0
offset_bottom = 69.0
theme = SubResource("Theme_juuyf")
text = "3.0"

[node name="incorrecto" type="Button" parent="ItemList"]
layout_mode = 0
offset_left = 507.0
offset_top = 379.0
offset_right = 567.0
offset_bottom = 439.0
theme = ExtResource("4_sq1el")
toggle_mode = true

[node name="RichTextLabel" type="RichTextLabel" parent="ItemList/incorrecto"]
layout_mode = 0
offset_left = 86.0
offset_top = 7.0
offset_right = 847.0
offset_bottom = 69.0
scale = Vector2(0.970588, 1)
theme = SubResource("Theme_juuyf")
text = "5.0"

[node name="incorrecto2" type="Button" parent="ItemList"]
layout_mode = 0
offset_left = 507.0
offset_top = 519.0
offset_right = 567.0
offset_bottom = 579.0
theme = ExtResource("4_sq1el")
toggle_mode = true

[node name="RichTextLabel" type="RichTextLabel" parent="ItemList/incorrecto2"]
layout_mode = 0
offset_left = 86.0
offset_top = 7.0
offset_right = 847.0
offset_bottom = 69.0
theme = SubResource("Theme_juuyf")
text = "2.0"

[node name="Siguiente" type="Button" parent="ItemList"]
layout_mode = 0
offset_left = 1168.0
offset_top = 648.0
offset_right = 1267.0
offset_bottom = 711.0
theme = SubResource("Theme_nvvw5")

[node name="Volver" type="Button" parent="ItemList"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 113.0
offset_top = -13.0
offset_right = 212.0
offset_bottom = 50.0
grow_vertical = 0
rotation = 3.14159
theme = SubResource("Theme_nvvw5")
